apps/flipt/base/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flipt
  labels:
    name: flipt
