apps/flipt/base/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flipt-service
spec:
  selector:
    app: flipt
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: grpc
      port: 9000
      targetPort: grpc
      protocol: TCP
  type: ClusterIP
