apps/flipt/base/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flipt-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - flipt.azhe.my.id
      secretName: flipt-tls
  rules:
    - host: flipt.azhe.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flipt-service
                port:
                  number: 8080
